# rwkv-qualcomm

./: .gitattributes  .gitignore  .gitmodules  README.md  build_hexagon_wkv_kernel.sh  cmd.md  compute_linear_param_encodings.py  compute_quant_encodings_experimental.py  convert_model.py  convert_model_dlc.py  convert_omniquant_parameters.py  convert_tokenizer.py  convert_vocab.py  example.config  export_quantized_model.py  export_quantized_model_encodings.py  make_calibration_samples.py  make_context_cache_binary.py  make_context_cache_binary_dlc.py  pack_model_file.py  parallel_convert_pipeline.py  parallel_generate.py  qacc_config.yaml  quantsim_eval_lambada.py  quantsim_eval_mmlu.py  rwkv_model.py  upload_all.py
archive/: compute_linear_param_encodings.py  convert_model.py
assets/: lambada_test.txt  rwkv_vocab_v20230424_tts.txt
chatrwkv-qualcomm/: CMakeLists.txt  Makefile
chatrwkv-qualcomm/make/: Android.mk  Application.mk  Makefile.linux-x86_64
chatrwkv-qualcomm/src/: CMakeLists.txt  Interfaces.hpp  chatrwkv-qualcomm-app.cpp  chatrwkv-qualcomm-app.hpp  main.cpp  tokenizer.cpp  tokenizer.h
chatrwkv-qualcomm/src/Utils/: DynamicLoadUtil.cpp  DynamicLoadUtil.hpp
docs/: AIMET_convert.md  AIMET_quant.md  Legacy_convert.md  optrace.md
hexagon/: RwkvWkvOpPackageCPU.xml  RwkvWkvOpPackageHTP.xml
hexagon/CPU/RwkvWkvOpPackage/: Makefile
hexagon/CPU/RwkvWkvOpPackage/config/: RwkvWkvOpPackageCPU.xml
hexagon/CPU/RwkvWkvOpPackage/makefiles/: Android.mk  Makefile.linux-x86_64
hexagon/CPU/RwkvWkvOpPackage/src/: RwkvWkvOpPackageInterface.cpp
hexagon/CPU/RwkvWkvOpPackage/src/ops/: wkv.cpp  wkv6.cpp  wkv6_chunk.cpp  wkv7.cpp  wkv7_output.cpp  wkv7_state.cpp  wkv_chunk.cpp
hexagon/HTP/RwkvWkvOpPackage/: Makefile
hexagon/HTP/RwkvWkvOpPackage/config/: RwkvWkvOpPackageHTP.xml
hexagon/HTP/RwkvWkvOpPackage/src/: RwkvWkvOpPackageInterface.cpp
hexagon/HTP/RwkvWkvOpPackage/src/ops/: wkv.cpp  wkv6.cpp  wkv6_chunk.cpp  wkv7.cpp  wkv7_output.cpp  wkv7_output_state.cpp  wkv7_output_x.cpp  wkv7_state.cpp
hexagon/RwkvWkvOpPackage/config/: RwkvWkvOpPackage.xml
hexagon/RwkvWkvOpPackage/src/: RwkvWkvOpPackageInterface.cpp
hexagon/RwkvWkvOpPackage/src/ops/: wkv.cpp  wkv_chunk.cpp
hexagon/test/: test_qnn_wkv_cpu.py  test_qnn_wkv_htp.py  test_qnn_wkv_kernel.py  testgraph.py  wkv_custom.py
librwkv-qualcomm/: CMakeLists.txt  Makefile
librwkv-qualcomm/make/: Android-bench.mk  Android-demo.mk  Android-eval.mk  Android-mmlu.mk  Android.mk  Application.mk  Makefile.linux-x86_64  Makefile.oe-linux-aarch64-gcc11.2  Makefile.oe-linux-aarch64-gcc8.2  Makefile.oe-linux-aarch64-gcc9.3  Makefile.ubuntu-aarch64-gcc9.4
librwkv-qualcomm/src/: CMakeLists.txt  Interfaces.hpp  QnnTypeDef.hpp  QnnTypeMacros.hpp  bench.cpp  eval_text.cpp  librwkv-qualcomm-app.cpp  librwkv-qualcomm-app.hpp  librwkv-qualcomm.cpp  librwkv-qualcomm.h  main.cpp  mmlu.cpp  rmpack.cpp  rmpack.h  soc_detect.cpp  soc_detect.h  tokenizer.cpp  tokenizer.h  trie.hpp
librwkv-qualcomm/src/Log/: LogUtils.cpp  LogUtils.hpp  Logger.cpp  Logger.hpp
librwkv-qualcomm/src/PAL/include/PAL/: Debug.hpp  Directory.hpp  Dsp.hpp  DynamicLoading.hpp  FileOp.hpp  GetOpt.hpp  Path.hpp  StringOp.hpp
librwkv-qualcomm/src/PAL/src/common/: GetOpt.cpp  StringOp.cpp
librwkv-qualcomm/src/PAL/src/linux/: Directory.cpp  DynamicLoading.cpp  FileOp.cpp  Path.cpp
librwkv-qualcomm/src/PAL/src/windows/: Common.cpp  Common.hpp  Directory.cpp  Dsp.cpp  DynamicLoading.cpp  FileOp.cpp  Path.cpp
librwkv-qualcomm/src/Utils/: BuildId.hpp  ClientBuffer.cpp  ClientBuffer.hpp  DataUtil.cpp  DataUtil.hpp  DmaBufAllocator.cpp  DmaBufAllocator.hpp  DynamicLoadUtil.cpp  DynamicLoadUtil.hpp  IBufferAlloc.hpp  IOTensor.cpp  IOTensor.hpp  RpcMem.cpp  RpcMem.hpp  Utils.cpp  Utils.hpp  dlwrap.cpp  dlwrap.hpp
librwkv-qualcomm/src/WrapperUtils/: QnnWrapperUtils.cpp  QnnWrapperUtils.hpp
qnn_configs/: 8380_fp16_config.json  8380_fp16_link.json  8380_quant_config.json  8380_quant_link.json  8450_fp16_config.json  8450_fp16_link.json  8475_fp16_config.json  8475_fp16_link.json  8550_fp16_config.json  8550_fp16_link.json  8650_fp16_config.json  8650_fp16_link.json  8650_quant_config.json  8650_quant_link.json
quant_encodings/: README.md  RWKV-x060-World-1B6-v2.1-20240328-ctx4096_mse_rwkv_gptq_exceptions_asym_torch_w4.encodings  RWKV-x060-World-3B-v2.1-20240417-ctx4096_mse_rwkv_gptq_exceptions_asym_torch_w4.encodings
quantizers/: adascale_optimizer.py  base_quantizer.py  exceptions.py
quantizers/advanced_ptq/: actmse_quantizer.py
quantizers/configs/: backend_aware_htp_quantsim_config_v75.json  default_per_channel_config.json  htp_quantsim_config_v75.json  htp_quantsim_config_v75_per_channel.json  qsim_config_per_channel_with_exceptions.json  rwkv_activation_exceptions.json  rwkv_gptq_exceptions.json
rwkv_src/: configuration_rwkv6.py  elemwise_ops.py  modeling_rwkv6.py  rwkv_model.py  rwkv_tokenizer.py  rwkv_v5_modules.py  rwkv_v6_modules.py  rwkv_v7_modules.py  rwkv_v7_modules_conv.py  wkv_custom.py
utils/: dataset_builder.py  htp_devices_config.py  indexed_dataset.py  model_preparer.py  model_utils.py  split_onnx.py
